DigIt CHANGE LOG
======================

2025/07/23 fixed some incorrect calculations in Page percentages;
           Changed BuildPaperSizesMenu to use TPhysicalUnit;
           Use of PaperSizes global var in BuildPaperSizesMenu;
           Added temp ConvertPaperToResolutionUnit function;
           Added AddPapers to Add US and Business Cards Papers;
           Deleted Flip/Rotate Image to Initial Value in MainForm;
           Session LoadImage first Resize Image;
           Added Page Resize/Flip/Rotate Properties in Session;

        22 Added defaultResolution, BitmapWidth/Height to PhysicalSize;
           Added GetPixelsSize and SetBitmapValues to PhysicalSize
           Added defaultResolution to Session;
           Use of PageSize.SetBitmapValues on Session.LoadImage;
           Use of PageSize.GetPixelsSize on Session.ResizeImage;

        16 Use of Bitmap e PhysicalRect in TDigItPhysicalSize;
           Use of BGRABitmap PhysicalSizeConvert (pull req Pending);

        15 Added Session OnCropModeChange;
           Use of Path_Session intestead of rPath in Session;
           Separeted Load of CropMode from LoadCropAreas in Session;
           Added GetEnabledActions_Captured in Session;
           Changed Set of CropMode in MainForm;
           Changed name of TPhysicalUnit const for compatibility with TCSSUnit;

        14 Changed TDigItPhysicalSize Unit like BGRABitmap TCSSUnit (pending pull request);
           Added Crop methods in Session;
           Added others ProgressSet overloads to Bridge;
           Moved CreateForm TMMForm_Progress to MainForm Create;
           Added Crop Events in MainForm;
           Solved Some Copy/Past Bugs (first Take Test with Session);

        11 Added Session Load/Save XML Events;
           Added SES_ Events methods in MainForm to Update UI (must be completed);
           Added temporary PhysicalRectArrayToCropAreas method;
